// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|UserList default (empty) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:1040px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0 -10px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <section
    className="c0"
  />
</div>
`;

exports[`Storyshots Shared Components|UserList with users (as admin) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c5 {
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 24px;
  font-weight: 600;
  word-break: break-word;
}

.c1 {
  margin-bottom: 20px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 100%;
  min-height: 150px;
  min-height: 94px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
}

.c2 {
  color: #71737e;
  font-weight: bold;
}

@media (min-width:1040px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0 -10px;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: calc(100%/3 - 20px);
    max-width: 320px;
    min-height: 192px;
    margin: 10px;
  }
}

@media (min-width:1040px) {
  .c1 {
    min-height: 88px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <section
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 14,
            }
          }
        >
          <div
            className="c2"
          >
            <span>
              Admin
            </span>
          </div>
          <button
            disabled={false}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": 30,
                "margin": "0",
                "minHeight": 30,
                "outline": "none",
                "padding": 0,
                "position": "absolute",
                "right": 10,
                "top": 10,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 30,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <a
              className="c5"
              href="/user/1"
              onClick={[Function]}
            >
              Alan
               
              Watts
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 14,
            }
          }
        >
          <div
            className="c2"
          >
            <span>
              Editor
            </span>
          </div>
          <button
            disabled={false}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": 30,
                "margin": "0",
                "minHeight": 30,
                "outline": "none",
                "padding": 0,
                "position": "absolute",
                "right": 10,
                "top": 10,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 30,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <a
              className="c5"
              href="/user/2"
              onClick={[Function]}
            >
              Dale
               
              Chihuly
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 14,
            }
          }
        >
          <div
            className="c2"
          >
            <span>
              Admin
            </span>
          </div>
          <button
            disabled={false}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": 30,
                "margin": "0",
                "minHeight": 30,
                "outline": "none",
                "padding": 0,
                "position": "absolute",
                "right": 10,
                "top": 10,
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 30,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <a
              className="c5"
              href="/user/3"
              onClick={[Function]}
            >
              Dave
               
              Bowie
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Shared Components|UserList with users 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c5 {
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 24px;
  font-weight: 600;
  word-break: break-word;
}

.c1 {
  margin-bottom: 20px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 100%;
  min-height: 150px;
  min-height: 94px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
}

.c2 {
  color: #71737e;
  font-weight: bold;
}

@media (min-width:1040px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin: 0 -10px;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: calc(100%/3 - 20px);
    max-width: 320px;
    min-height: 192px;
    margin: 10px;
  }
}

@media (min-width:1040px) {
  .c1 {
    min-height: 88px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <section
    className="c0"
  >
    <div
      className="c1"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 14,
            }
          }
        >
          <div
            className="c2"
          >
            <span>
              Admin
            </span>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <a
              className="c5"
              href="/user/1"
              onClick={[Function]}
            >
              Alan
               
              Watts
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 14,
            }
          }
        >
          <div
            className="c2"
          >
            <span>
              Editor
            </span>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <a
              className="c5"
              href="/user/2"
              onClick={[Function]}
            >
              Dale
               
              Chihuly
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": null,
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#71737e",
              "marginBottom": 14,
            }
          }
        >
          <div
            className="c2"
          >
            <span>
              Admin
            </span>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <a
              className="c5"
              href="/user/3"
              onClick={[Function]}
            >
              Dave
               
              Bowie
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
